--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta property="og:title" content="Dan Lehner React Jazz Quiz" />
+    <meta property="og:description" content="A short quiz about jazz music written in React.JS" />
+    <meta property="og:image" content="https://ibb.co/x8HY05F" />
+    <meta property="og:url" content="https://danlehner.github.io/react-jazz-quiz/" />
+    <meta name="description" content="Quiz created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
